--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Enhanced nginx.conf with better error handling and timeout management
+# Enhanced nginx.conf with chat persistence support
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -79,6 +79,20 @@ http {
             redis2_literal_raw_query on;
         }
 
+        location ~ ^/redis-internal/hget/(.+) {
+            internal;
+            set_by_lua_block $redis_cmd {
+                local key_and_field = ngx.var[1]
+                local parts = {}
+                for part in key_and_field:gmatch("[^/]+") do
+                    table.insert(parts, part)
+                end
+                return "hget " .. parts[1] .. " " .. parts[2]
+            }
+            redis2_raw_query $redis_cmd;
+            redis2_pass redis_backend;
+        }
+
         location ~ ^/redis-internal/exists/(.+) {
             internal;
             redis2_query exists $1;
@@ -94,6 +108,40 @@ http {
         location ~ ^/redis-internal/keys/(.+) {
             internal;
             redis2_query keys $1;
+            redis2_pass redis_backend;
+        }
+
+        location ~ ^/redis-internal/sadd/(.+) {
+            internal;
+            set_by_lua_block $redis_cmd {
+                local key_and_member = ngx.var[1]
+                local parts = {}
+                for part in key_and_member:gmatch("[^/]+") do
+                    table.insert(parts, part)
+                end
+                return "sadd " .. parts[1] .. " " .. parts[2]
+            }
+            redis2_raw_query $redis_cmd;
+            redis2_pass redis_backend;
+        }
+
+        location ~ ^/redis-internal/srem/(.+) {
+            internal;
+            set_by_lua_block $redis_cmd {
+                local key_and_member = ngx.var[1]
+                local parts = {}
+                for part in key_and_member:gmatch("[^/]+") do
+                    table.insert(parts, part)
+                end
+                return "srem " .. parts[1] .. " " .. parts[2]
+            }
+            redis2_raw_query $redis_cmd;
+            redis2_pass redis_backend;
+        }
+
+        location ~ ^/redis-internal/smembers/(.+) {
+            internal;
+            redis2_query smembers $1;
             redis2_pass redis_backend;
         }
 
@@ -135,6 +183,12 @@ http {
             redis2_pass redis_backend;
         }
 
+        location ~ ^/redis-internal/ping {
+            internal;
+            redis2_query ping;
+            redis2_pass redis_backend;
+        }
+
         # ===== AUTH ENDPOINTS =====
         
         location = /api/auth/login {
@@ -149,9 +203,32 @@ http {
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
+        # ===== CHAT PERSISTENCE ENDPOINTS =====
+        
+        location = /api/chat/save {
+            content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
+        }
+
+        location ~ ^/api/chat/load/(.+) {
+            content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
+        }
+
+        location = /api/chat/list {
+            content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
+        }
+
+        location ~ ^/api/chat/delete/(.+) {
+            content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
+        }
+
         # ===== CHAT ENDPOINTS =====
         
         location /api/chat {
+            # Skip persistence endpoints
+            if ($uri ~ ^/api/chat/(save|load|list|delete|test)) {
+                break;
+            }
+            
             # Enhanced authentication check
             access_by_lua_block {
                 local cjson = require "cjson"
@@ -194,17 +271,17 @@ http {
             proxy_pass_request_headers on;
             proxy_pass_request_body on;
             
-            # Enhanced timeout settings
+            # Enhanced timeout settings for hybrid mode
             proxy_buffering off;
             proxy_cache off;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_connect_timeout 10s;
+            proxy_read_timeout 600s;
+            proxy_send_timeout 600s;
+            proxy_connect_timeout 30s;
             
             # Error handling
             proxy_intercept_errors off;
             proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-            proxy_next_upstream_timeout 30s;
+            proxy_next_upstream_timeout 60s;
             proxy_next_upstream_tries 3;
             
             # CORS headers
@@ -251,19 +328,49 @@ http {
             }
             
             content_by_lua_block {
-                -- Check if Ollama is responding
-                local res = ngx.location.capture("http://devstral-ollama:11434/api/tags")
-                local status = "ok"
-                local message = "Chat API test successful! Connection to AI service verified."
+                -- Test both Redis and Ollama connectivity
+                local redis_ok = false
+                local ollama_ok = false
                 
-                if res.status ~= 200 then
+                -- Test Redis
+                local redis_res = ngx.location.capture("/redis-internal/ping")
+                if redis_res.status == 200 and redis_res.body:match("PONG") then
+                    redis_ok = true
+                end
+                
+                -- Test Ollama
+                local ollama_res = ngx.location.capture_multi({
+                    {"/proxy-ollama-tags"}
+                })
+                if ollama_res[1].status == 200 then
+                    ollama_ok = true
+                end
+                
+                local status = "ok"
+                local message = "Chat services are operational"
+                
+                if not redis_ok then
+                    status = "error"
+                    message = "Redis connection failed"
+                elseif not ollama_ok then
                     status = "warning"
-                    message = "Chat API accessible but AI service may be unavailable."
+                    message = "AI service may be unavailable"
                 end
                 
                 ngx.header.content_type = "application/json"
-                ngx.say('{"message": {"content": "' .. message .. '"}, "status": "' .. status .. '", "timestamp": "' .. ngx.utctime() .. '"}')
+                ngx.say('{"message": {"content": "' .. message .. '"}, "status": "' .. status .. '", "redis": ' .. (redis_ok and "true" or "false") .. ', "ollama": ' .. (ollama_ok and "true" or "false") .. ', "timestamp": "' .. ngx.utctime() .. '"}')
             }
+        }
+
+        # Internal proxy for Ollama tags
+        location = /proxy-ollama-tags {
+            internal;
+            proxy_pass http://ollama_backend/api/tags;
+            proxy_method GET;
+            proxy_set_header Host $host;
+            proxy_connect_timeout 5s;
+            proxy_read_timeout 5s;
+            proxy_send_timeout 5s;
         }
 
         # ===== ADMIN ENDPOINTS =====
@@ -392,21 +499,20 @@ http {
             access_log off;
             content_by_lua_block {
                 -- Check Redis
-                local redis_ok = true
+                local redis_ok = false
                 local redis_res = ngx.location.capture("/redis-internal/ping")
-                if redis_res.status ~= 200 then
-                    redis_ok = false
+                if redis_res.status == 200 and redis_res.body:match("PONG") then
+                    redis_ok = true
                 end
                 
-                -- Check Ollama (with timeout)
-                local ollama_ok = true
-                local ollama_res = ngx.location.capture("/api/chat/test", {
-                    method = ngx.HTTP_GET,
-                    args = {},
-                    headers = {
-                        ["Authorization"] = "Bearer dummy"
-                    }
+                -- Check Ollama
+                local ollama_ok = false
+                local ollama_res = ngx.location.capture_multi({
+                    {"/proxy-ollama-tags"}
                 })
+                if ollama_res[1].status == 200 then
+                    ollama_ok = true
+                end
                 
                 local status = "healthy"
                 if not redis_ok or not ollama_ok then
