--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -222,6 +222,197 @@ http {
         }
 
         # ===== CHAT ENDPOINTS =====
+
+        location = /api/chat/save {
+            access_by_lua_block {
+                local cjson = require "cjson"
+                local auth_header = ngx.var.http_authorization
+                
+                if not auth_header or not string.match(auth_header, "^Bearer ") then
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Authentication required"}')
+                    ngx.exit(401)
+                end
+                
+                local token = string.sub(auth_header, 8)
+                local ok, payload = pcall(function()
+                    return cjson.decode(ngx.decode_base64(token))
+                end)
+                
+                if not ok or not payload.exp or payload.exp < ngx.time() then
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Invalid or expired token"}')
+                    ngx.exit(401)
+                end
+            }
+            
+            content_by_lua_block {
+                local cjson = require "cjson"
+                
+                if ngx.var.request_method ~= "POST" then
+                    ngx.status = 405
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Method not allowed"}')
+                    return
+                end
+
+                ngx.req.read_body()
+                local body = ngx.req.get_body_data()
+                
+                if not body then
+                    ngx.status = 400
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Request body required"}')
+                    return
+                end
+
+                local ok, chat_data = pcall(cjson.decode, body)
+                if not ok then
+                    ngx.status = 400
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Invalid JSON"}')
+                    return
+                end
+
+                if not chat_data.id or not chat_data.user_id or not chat_data.messages then
+                    ngx.status = 400
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Missing required fields"}')
+                    return
+                end
+
+                local chat_key = "chat:" .. chat_data.id
+                local messages_json = cjson.encode(chat_data.messages)
+                local title = chat_data.title or "New Chat"
+                local timestamp = ngx.utctime()
+                
+                local save_result = ngx.location.capture("/redis-internal/hmset/" .. chat_key .. 
+                    "/id/" .. chat_data.id ..
+                    "/user_id/" .. chat_data.user_id ..
+                    "/title/" .. ngx.escape_uri(title) ..
+                    "/messages/" .. ngx.escape_uri(messages_json) ..
+                    "/created_at/" .. timestamp ..
+                    "/updated_at/" .. timestamp)
+
+                if save_result.status == 200 then
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"success": true, "message": "Chat saved successfully", "chat_id": "' .. chat_data.id .. '"}')
+                else
+                    ngx.status = 500
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Failed to save chat"}')
+                end
+            }
+        }
+
+        location ~ ^/api/chat/load/(.+) {
+            access_by_lua_block {
+                local cjson = require "cjson"
+                local auth_header = ngx.var.http_authorization
+                
+                if not auth_header or not string.match(auth_header, "^Bearer ") then
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Authentication required"}')
+                    ngx.exit(401)
+                end
+                
+                local token = string.sub(auth_header, 8)
+                local ok, payload = pcall(function()
+                    return cjson.decode(ngx.decode_base64(token))
+                end)
+                
+                if not ok or not payload.exp or payload.exp < ngx.time() then
+                    ngx.status = 401
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Invalid or expired token"}')
+                    ngx.exit(401)
+                end
+            }
+            
+            content_by_lua_block {
+                local cjson = require "cjson"
+                
+                local chat_id = ngx.var[1]
+                if not chat_id then
+                    ngx.status = 400
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Chat ID required"}')
+                    return
+                end
+
+                local chat_key = "chat:" .. chat_id
+                local result = ngx.location.capture("/redis-internal/hgetall/" .. chat_key)
+                
+                if result.status ~= 200 then
+                    ngx.status = 500
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Failed to load chat"}')
+                    return
+                end
+
+                local chat_data = {}
+                local lines = {}
+                for line in result.body:gmatch("[^\r\n]+") do
+                    if line and line ~= "" then
+                        table.insert(lines, line)
+                    end
+                end
+
+                local i = 1
+                if lines[i] and string.match(lines[i], "^%*%d+$") then
+                    i = i + 1
+                end
+
+                while i <= #lines do
+                    if lines[i] and string.match(lines[i], "^%$%d+$") then
+                        i = i + 1
+                        if lines[i] then
+                            local key = lines[i]
+                            i = i + 1
+                            
+                            if lines[i] and string.match(lines[i], "^%$%d+$") then
+                                i = i + 1
+                                if lines[i] then
+                                    local value = lines[i]
+                                    chat_data[key] = value
+                                end
+                            end
+                        end
+                    end
+                    i = i + 1
+                end
+
+                if not chat_data.id then
+                    ngx.status = 404
+                    ngx.header.content_type = "application/json"
+                    ngx.say('{"error": "Chat not found"}')
+                    return
+                end
+
+                local messages = {}
+                if chat_data.messages then
+                    local ok, parsed_messages = pcall(cjson.decode, ngx.unescape_uri(chat_data.messages))
+                    if ok then
+                        messages = parsed_messages
+                    end
+                end
+
+                local response_data = {
+                    id = chat_data.id,
+                    user_id = chat_data.user_id,
+                    title = ngx.unescape_uri(chat_data.title or "New Chat"),
+                    messages = messages,
+                    created_at = chat_data.created_at,
+                    updated_at = chat_data.updated_at
+                }
+
+                ngx.header.content_type = "application/json"
+                ngx.say(cjson.encode(response_data))
+            }
+        }
         
         location /api/chat {
             # Skip persistence endpoints
