--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Refactored nginx.conf - Clean and modular with Lua files
+# Fixed nginx.conf - Clean and modular with no duplicates
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -217,14 +217,25 @@ http {
         # ===== CHAT ENDPOINTS =====
         
         # Chat persistence endpoints (handled by Lua)
-        location ~ ^/api/chat/(save|load|list|delete|test) {
+        location ~ ^/api/chat/(save|load|current|clear|test) {
             content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
             limit_req zone=api burst=10 nodelay;
             limit_req_status 429;
         }
 
-        # Main chat endpoint (proxied to Ollama)
+        # Main chat endpoint (proxied to Ollama) - SINGLE LOCATION ONLY
         location = /api/chat {
+            # Handle OPTIONS for CORS
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+                add_header Access-Control-Max-Age 1728000;
+                add_header Content-Type "text/plain; charset=utf-8";
+                add_header Content-Length 0;
+                return 204;
+            }
+
             # Auth check using Lua
             access_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
             
@@ -262,19 +273,6 @@ http {
             # Rate limiting
             limit_req zone=api burst=5 nodelay;
             limit_req_status 429;
-        }
-
-        # CORS preflight for chat
-        location = /api/chat {
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin *;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-                add_header Access-Control-Max-Age 1728000;
-                add_header Content-Type "text/plain; charset=utf-8";
-                add_header Content-Length 0;
-                return 204;
-            }
         }
 
         # ===== ADMIN ENDPOINTS =====
