Dont show admin ui on error, dont let user set is_admin in browser... ROOKIE MISTAKE BRUH

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Fixed nginx.conf - Clean and modular with no duplicates
+# Fixed nginx.conf - Rate limiting fix for login issues
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -55,9 +55,10 @@ http {
     redis2_send_timeout 10s;
     redis2_read_timeout 10s;
 
-    # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=api:10m rate=30r/m;
-    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/m;
+    # FIXED: More generous rate limiting zones
+    limit_req_zone $binary_remote_addr zone=api:10m rate=60r/m;      # Increased from 30r/m
+    limit_req_zone $binary_remote_addr zone=auth:10m rate=20r/m;     # Increased from 5r/m
+    limit_req_zone $binary_remote_addr zone=chat:10m rate=30r/m;     # New zone for chat
 
     server {
         listen 80;
@@ -210,7 +211,8 @@ http {
         
         location ~ ^/api/auth/(.+) {
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
-            limit_req zone=auth burst=5 nodelay;
+            # FIXED: More generous rate limiting for auth
+            limit_req zone=auth burst=10 nodelay;
             limit_req_status 429;
         }
 
@@ -219,11 +221,12 @@ http {
         # Chat persistence endpoints (handled by Lua)
         location ~ ^/api/chat/(save|load|current|clear|test) {
             content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
-            limit_req zone=api burst=10 nodelay;
+            # FIXED: Use separate chat zone with generous limits
+            limit_req zone=chat burst=15 nodelay;
             limit_req_status 429;
         }
 
-        # Main chat endpoint (proxied to Ollama) - SINGLE LOCATION ONLY
+        # Main chat endpoint (proxied to Ollama)
         location = /api/chat {
             # Handle OPTIONS for CORS
             if ($request_method = 'OPTIONS') {
@@ -270,8 +273,8 @@ http {
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
             add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
             
-            # Rate limiting
-            limit_req zone=api burst=5 nodelay;
+            # FIXED: More generous rate limiting for chat
+            limit_req zone=chat burst=5 nodelay;
             limit_req_status 429;
         }
 
@@ -279,7 +282,8 @@ http {
         
         location ~ ^/api/admin/(.+) {
             content_by_lua_file /usr/local/openresty/nginx/lua/admin.lua;
-            limit_req zone=api burst=5 nodelay;
+            # FIXED: More generous rate limiting for admin
+            limit_req zone=api burst=10 nodelay;
             limit_req_status 429;
         }
 
@@ -391,6 +395,13 @@ http {
             expires 1h;
             add_header Cache-Control "public, immutable";
             try_files $uri =404;
+        }
+
+        # Add favicon.ico handling
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            return 204;
         }
 
         # ===== SECURITY BLOCKS =====
