--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -219,7 +219,7 @@ http {
         # ===== CHAT ENDPOINTS =====
         
         # Chat persistence endpoints (handled by Lua)
-        location ~ ^/api/chat/(save|load|current|clear|test) {
+        location ~ ^/api/chat/(save|load|current|clear|test)$ {
             content_by_lua_file /usr/local/openresty/nginx/lua/chat.lua;
             # FIXED: Use separate chat zone with generous limits
             limit_req zone=chat burst=15 nodelay;
