propper jwt and reg lua

--- a/.env
+++ b/.env
@@ -2,6 +2,12 @@
 # =============================================================================
 # 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
 # =============================================================================
+# 🔐 JWT CONFIGURATION
+# =============================================================================
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
+
+# You can generate a secure secret with:
+# openssl rand -base64 32
 
 # Domain Configuration (REQUIRED TO CHANGE)
 ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
