--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -99,6 +99,39 @@ http {
             redis2_pass redis_backend;
         }
 
+        # JWT storage operations
+        location ~ ^/redis-internal/get/(.+) {
+            internal;
+            redis2_query get $1;
+            redis2_pass redis_backend;
+        }
+
+        location ~ ^/redis-internal/setex/(.+) {
+            internal;
+            set_by_lua_block $redis_cmd {
+                local key_ttl_value = ngx.var[1]
+                local parts = {}
+                for part in key_ttl_value:gmatch("[^/]+") do
+                    table.insert(parts, part)
+                end
+                
+                if #parts >= 3 then
+                    local key = parts[1]
+                    local ttl = parts[2]
+                    local value = parts[3]
+                    -- Join remaining parts back if value contains slashes
+                    for i = 4, #parts do
+                        value = value .. "/" .. parts[i]
+                    end
+                    return "setex " .. key .. " " .. ttl .. " " .. value
+                else
+                    return "setex " .. (parts[1] or "") .. " " .. (parts[2] or "0") .. " " .. (parts[3] or "")
+                end
+            }
+            redis2_raw_query $redis_cmd;
+            redis2_pass redis_backend;
+        }
+
         location ~ ^/redis-internal/exists/(.+) {
             internal;
             redis2_query exists $1;
