--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Fixed nginx.conf - Rate limiting fix for login issues
+# Fixed nginx.conf - With separate auth and register endpoints for debugging
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -228,6 +228,25 @@ http {
             redis2_pass redis_backend;
         }
 
+        # Enhanced Redis debugging operations
+        location ~ ^/redis-internal/info$ {
+            internal;
+            redis2_query info;
+            redis2_pass redis_backend;
+        }
+        
+        location ~ ^/redis-internal/dbsize$ {
+            internal;
+            redis2_query dbsize;
+            redis2_pass redis_backend;
+        }
+        
+        location ~ ^/redis-internal/type/(.+) {
+            internal;
+            redis2_query type $1;
+            redis2_pass redis_backend;
+        }
+
         # ===== INTERNAL OLLAMA PROXY =====
         
         location = /proxy-ollama-tags {
@@ -240,11 +259,18 @@ http {
             proxy_send_timeout 5s;
         }
 
-        # ===== AUTH ENDPOINTS =====
+        # ===== SEPARATE AUTH AND REGISTER ENDPOINTS =====
         
+        # Registration endpoints (handled by register.lua)
+        location ~ ^/api/register(.*)$ {
+            content_by_lua_file /usr/local/openresty/nginx/lua/register.lua;
+            limit_req zone=auth burst=10 nodelay;
+            limit_req_status 429;
+        }
+        
+        # Authentication endpoints (handled by auth.lua)
         location ~ ^/api/auth/(.+) {
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
-            # FIXED: More generous rate limiting for auth
             limit_req zone=auth burst=10 nodelay;
             limit_req_status 429;
         }
