--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,15 +1,12 @@
-# nginx/Dockerfile - Simplified without startup script
+# nginx/Dockerfile - JWT workaround using OpenSSL for HMAC
 
 FROM openresty/openresty:1.25.3.1-0-alpine-fat
 
-# Install additional dependencies including JWT support
+# Install additional dependencies including OpenSSL for HMAC
 RUN apk add --no-cache \
     curl \
     wget \
-    openssl \
-    && luarocks install lua-resty-hmac
-
-# Rest of your Dockerfile remains the same...
+    openssl
 
 # Set working directory
 WORKDIR /usr/local/openresty/nginx/html
@@ -32,7 +29,7 @@ RUN curl -o /usr/local/openresty/nginx/html/js/lib/jquery.min.js https://code.jq
     curl -o /usr/local/openresty/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js && \
     curl -o /usr/local/openresty/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
 
-# Copy NGINX configuration and Lua files (no startup script needed)
+# Copy NGINX configuration and Lua files
 COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
 COPY lua/ /usr/local/openresty/nginx/lua/
 COPY html/ /usr/local/openresty/nginx/html/
