--- a/.env
+++ b/.env
@@ -108,6 +108,8 @@ LOG_FORMAT=json
 # =============================================================================
 # 📦 REDIS CONFIGURATION
 # =============================================================================
+REDIS_HOST=redis
+REDIS_PORT=6379
 REDIS_URL=redis://redis:6379/0
 REDIS_MAX_CONNECTIONS=30                 # Max Redis connections
 REDIS_SOCKET_KEEPALIVE=true
