--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,6 +39,9 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/json;
 
+    #USE DOCKER DNS
+    resolver 127.0.0.11 ipv6=off;
+
     # Upstreams
     upstream redis_backend {
         server devstral-redis:6379;
