--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,11 @@ worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
+#COMPOSE ENVS FOR WORKERS
+env REDIS_HOST;
+env REDIS_PORT;
+env JWT_SECRET;
+
 events {
     worker_connections 1024;
     use epoll;
