/chat /admin ==> /login

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -358,56 +358,51 @@ http {
         
         location = /chat {
             access_by_lua_block {
-                local token = ngx.var.arg_token or ngx.var.cookie_auth_token
-                local auth_header = ngx.var.http_authorization
-                
-                if auth_header and string.match(auth_header, "^Bearer ") then
-                    token = string.sub(auth_header, 8)
-                end
-                
+                local cjson = require "cjson"
+                local jwt = require "resty.jwt"
+
+                local token = ngx.var.cookie_access_token
                 if not token then
-                    ngx.log(ngx.INFO, "No token found for /chat, serving page for client-side redirect")
+                    ngx.redirect("/login.html")
+                    return
+                end
+
+                local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
+                if not jwt_obj.verified then
+                    ngx.redirect("/login.html")
+                    return
                 end
             }
-            
             try_files /chat.html =404;
         }
+
 
         location = /admin {
             access_by_lua_block {
                 local cjson = require "cjson"
-                
-                local token = ngx.var.arg_token or ngx.var.cookie_auth_token
-                local auth_header = ngx.var.http_authorization
-                
-                if auth_header and string.match(auth_header, "^Bearer ") then
-                    token = string.sub(auth_header, 8)
-                end
-                
+                local jwt = require "resty.jwt"
+
+                local token = ngx.var.cookie_access_token
                 if not token then
-                    ngx.log(ngx.WARN, "Admin access attempted without token from " .. ngx.var.remote_addr)
-                    return ngx.redirect("/login")
+                    ngx.redirect("/login.html")
+                    return
                 end
-                
-                local ok, payload = pcall(function()
-                    return cjson.decode(ngx.decode_base64(token))
-                end)
-                
-                if not ok or not payload.exp or payload.exp < ngx.time() then
-                    ngx.log(ngx.WARN, "Admin access with invalid token from " .. ngx.var.remote_addr)
-                    return ngx.redirect("/login")
+
+                local jwt_obj = jwt:verify(os.getenv("JWT_SECRET"), token)
+                if not jwt_obj.verified then
+                    ngx.redirect("/login.html")
+                    return
                 end
-                
-                if not payload.is_admin then
-                    ngx.log(ngx.WARN, "Non-admin user attempted admin access: " .. (payload.username or "unknown"))
-                    return ngx.redirect("/unauthorised")
+
+                -- Optionally also check if is_admin payload
+                if not jwt_obj.payload.is_admin then
+                    ngx.redirect("/login.html")
+                    return
                 end
-                
-                ngx.log(ngx.INFO, "Admin access granted to: " .. payload.username)
             }
-            
             try_files /admin.html =404;
         }
+
 
         # ===== PUBLIC ROUTES =====
         
