--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -356,7 +356,7 @@ http {
 
         # ===== SECURE HTML ROUTES =====
         
-        location = /chat {
+        location = /chat.html {
             access_by_lua_block {
                 local cjson = require "cjson"
                 local jwt = require "resty.jwt"
@@ -377,7 +377,7 @@ http {
         }
 
 
-        location = /admin {
+        location = /admin.html {
             access_by_lua_block {
                 local cjson = require "cjson"
                 local jwt = require "resty.jwt"
